--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 #login {
-  background-color: whitesmoke;
-  position: absolute;
-  left: 35%;
-  padding: 0px 60px 30px;
+  /* background-color: whitesmoke; */
+  padding: 10px 60px;
 }
 #message {
   font-size: large;
@@ -17,10 +15,31 @@
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
-.caption {
+label {
   font-size: 2.5rex;
 }
-#email,
-#password {
+.text-box {
   padding: 3px;
+}
+#account-info {
+  margin-top: 10px;
+}
+form {
+  max-width: fit-content;
+  margin: auto;
+}
+#sign-up {
+  float: right;
+  margin-top: 5px;
+  margin-right: 1%;
+  padding: 3px;
+}
+#sign-in-redirect {
+  text-align: center;
+  margin-top: 10%;
+}
+#sign-up-form {
+  /* background-color: aliceblue; */
+  padding: 20px 50px 5px 50px;
+  border: 1px solid black;
 }
